--- a/index.html
+++ b/index.html
@@ -5,19 +5,82 @@
     <title>Jumpstart</title>
     <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
+
+    <!--Google Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Monoton|Open+Sans:400,600,800" rel="stylesheet">
+
     <!--Reset stylesheet to remove browser styling-->
     <link rel='stylesheet' type='text/css' href='resources/css/reset.css'>
     <!--Bootstratp -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!--Slick CDN-->
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <!-- Custom stylesheet -->
-    <link href="resources/css/custom.css" rel="stylesheet" type="text/css">
+    <link href="resources/css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
 
+    <!--Nav bar-->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Explore</a></li>
+          <li><a href="#">Start a project</a></li>
+          <li><a href="#">About us</a></li>
+        </ul>
+        <img class="navbar-brand navbar-right collapse navbar-collapse" src="resources/images/logo.png">
+      </div>
+    </nav>
+
+    <!--Jumbotron-->
+    <div class="jumbotron background-bike">
+      <div class="container-fluid">
+        <h1>GET GOING.</h1>
+        <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+      </div>
+    </div>
+
+    <!--featured section-->
+
+    <div class="container featured-project">
+      <div class="row">
+        <h2 class="col-xs-12">Featured project</h2>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-md-6"> <!--full width on small screens; half width on full screens-->
+          <div class="image-container">
+            <a href="#"><img src="./resources/images/featured-project.png"></a>
+          </div>
+        </div>
+        <div class="col-xs-6 col-md-3">
+        <h3>DeFrost: A Documentary</h3>
+        <p>by Leo De Firenze</p>
+        <p>DeFrost is a documentary about growing up in a little red house in a cold, harsh valley. This is a story about my mother's childhood. This film attempts to capture vignettes of her upbringing — her family, friends, pets, and eventual depature from a freezing valley in Northern Italy — through beautiful cinematography and narration.</p>
+      </div>
+      <div class="col-xs-6 col-md-3 categories">
+        <h3>Product Categories</h3>
+        <ul>
+          <li>Art</li>
+          <li>Books</li>
+          <li>Crystals</li>
+          <li>Design</li>
+          <li>Doodles</li>
+          <li>Deedlybobs</li>
+          <li>Farming</li>
+          <li>Gadgets</li>
+          <li>Hoverboards</li>
+          <li>Jams, Jellies, Etc.</li>
+          <li>Magazines</li>
+          <li>Plants</li>
+          <li>Snakes &amp; Snake Equipment</li>
+          <li>Tables</li>
+          <li>Ventriliquist Figures</li>
+          <li>Yoyos</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
 
 
@@ -28,11 +91,10 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
+
+    <!-- JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="resources/slick/slick.min.js"></script>
+    <script type="text/javascript" src="resources/js/main.js"></script>
   </body>
 </html>
