--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Bootstratp -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!--Slick CDN-->
-    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="resources/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <!-- Custom stylesheet -->
     <link href="resources/css/style.css" rel="stylesheet" type="text/css">
@@ -33,17 +33,37 @@
       </div>
     </nav>
 
-    <!--Jumbotron-->
-    <div class="jumbotron background-bike">
-      <div class="container-fluid">
-        <h1>GET GOING.</h1>
-        <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+    <!-- Jumbotron -->
+    <div class="carousel">
+      <div class="jumbotron background-bike">
+        <div class="container-fluid">
+          <h1>GET GOING.</h1>
+          <p>Jumpstart your startup with some crowdsourced seed money, or support one of our 300,000,000+ creators and get rewards.</p>
+        </div>
       </div>
-      <div class="relative-wrapper">
-        <a href="#" class="btn btn-primary btn-lg cta">Jump in</a>
-
+      <div class="jumbotron background-beer">
+        <div class="container-fluid">
+          <h1>GET THINKING.</h1>
+          <p>Meet like-minded individuals who will help fuel your creative juices.</p>
+        </div>
+      </div>
+      <div class="jumbotron background-flowers">
+        <div class="container-fluid">
+          <h1>GET CREATING.</h1>
+          <p>Stop overthinking projects and begin putting them out into the world.</p>
+        </div>
+      </div>
+      <div class="jumbotron background-duffel">
+        <div class="container-fluid">
+          <h1>GET STARTED.</h1>
+          <p>What are you waiting for? Today's the day for your next big idea.</p>
+        </div>
       </div>
     </div>
+    <div class="relative-wrapper">
+      <a href="#" class="btn btn-primary btn-lg cta">Jump in</a>
+    </div>
+
 
     <!--featured section-->
 
